--- a/clothing-app/index.html
+++ b/clothing-app/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/clothing-app/src/assets/images/shopping-bag-gold-logo-vector-15003257-removebg-preview.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Clothing App</title>
   </head>
