--- a/clothing-app/index.html
+++ b/clothing-app/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/clothing-app/src/assets/images/shopping-bag-gold-logo-vector-15003257-removebg-preview.png" />
+    <!-- <link rel="icon" href="../clothing-app/public/android-chrome-192x192.png" /> -->
+    <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/128/6769/6769651.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Clothing App</title>
   </head>
